# handshake

./: README.md  pnpm-lock.yaml
clients/js-v2/: README.md  package.json
clients/js-v2/test/: _setup.ts  increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  state.rs
program/src/processor/: initiate.rs  mod.rs  transfer.rs
scripts/: generate-clients.mjs
