[package]
name = "handshake-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "HndshkSZWu1f4qdwyACwsP8YoBxvCzb7NNVB1Aj3w656"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
bytemuck = { version = "1.15.0", features = ["derive"] }
shank = "^0.4.2"
nifty-asset = "0.1.0"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "~1.17"
thiserror = "^1.0"
